Added bot api token and kestrel to config

--- a/KfcCoupons/KfcCoupons.csproj
+++ b/KfcCoupons/KfcCoupons.csproj
@@ -13,4 +13,13 @@
       <PackageReference Include="Telegram.Bot" Version="15.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="launchSettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 </Project>
