--- a/KfcCoupons/appsettings.json
+++ b/KfcCoupons/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "Telegram" : {
+    "BotToken": "Bot token. Get it at @BotFather"
+  },
+  "Kestrel" : {
+    "Endpoints" : {
+      "http4" : {
+        "Url" : "http://127.0.0.1:443"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
