Moved project to ConsoleApp because we don't need to respond to requests

--- a/KfcCoupons/appsettings.json
+++ b/KfcCoupons/appsettings.json
@@ -1,13 +1,9 @@
 {
+  "KfcCoupons" : {
+    "ChatId" : "Your chat ID here"
+  },
   "Telegram" : {
     "BotToken": "Bot token. Get it at @BotFather"
-  },
-  "Kestrel" : {
-    "Endpoints" : {
-      "http4" : {
-        "Url" : "http://127.0.0.1:443"
-      }
-    }
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
