--- a/KfcCoupons/KfcCoupons.csproj
+++ b/KfcCoupons/KfcCoupons.csproj
@@ -1,25 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
-      <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
-      <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.1-dev-00216" />
-      <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00834" />
-      <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-      <PackageReference Include="Telegram.Bot" Version="15.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
+        <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.1-dev-00216" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00834" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+        <PackageReference Include="Telegram.Bot" Version="15.1.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Update="launchSettings.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-
         <None Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
+
 </Project>
