--- a/KfcCoupons/appsettings.json
+++ b/KfcCoupons/appsettings.json
@@ -19,7 +19,7 @@
         "Name": "Console",
         "Args": {
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u4}] {SourceContext} {Message}{NewLine}{Exception}",
-          "restrictedToMinimumLevel": "Warning"
+          "restrictedToMinimumLevel": "Information"
         }
       },
       {
@@ -31,7 +31,7 @@
           "retainedFileCountLimit": 62,
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
-          "restrictedToMinimumLevel": "Error"
+          "restrictedToMinimumLevel": "Information"
         }
       }
     ]
